# dotfiles

./: .bashrc  .gitignore  .setup.sh  README.md
.config/alacritty/: alacritty.toml
.config/git/: config
.config/kitty/: kitty.conf
.config/nix/: flake.nix
.config/nixos/: README.md  common.nix  configuration.nix  flake.nix  hardware-configuration.nix  mercury-configuration.nix  mercury-hardware-configuration.nix  pia.nix  rook-configuration.nix  rook-hardware-configuration.nix  run-in-roblox.nix
.config/nixos/pia-local/: yae.json
.config/nvim/: DESIGN.md  TODO.md  init.lua  lazy-lock.json  minimal.lua
.config/nvim/lua/: colors.lua  status_bar.lua
.config/nvim/lua/image_preview_maker/: init.lua
.config/nvim/python/: pyproject.toml
.config/nvim/sandbox/: pickers.lua  test.luau  test.md
.config/opencode/: opencode.json  package-lock.json
.config/tmux/: tmux.conf
.jupyter/: migrated
.local/share/fonts/: .uuid
.setup/: bootstrap.sh  ignore_packages.txt  manual_packages.txt  record_apt.sh  setup.sh
.setup/base/: apply_keys.sh  apply_sources.sh  ignore_packages.txt  install_packages.sh  manual_packages.txt  nix.sh  record_keys.sh  record_sources.sh  sync_to_remote.sh
.setup/base/global_keys/: google-chrome.gpg
.setup/custom/: alacritty.sh  balena-etcher.sh  beads.sh  discord.sh  displaylink.sh  docker.sh  git.sh  git_setup.sh  go.sh  google-chrome.sh  kitty.sh  nvim.sh  pia_vpn.sh  pyenv.sh  rustup.sh  tectonic.sh  ubuntu.sh  vcpkg.sh
.setup/store/: ignore_packages.txt  manual_packages.txt  write_packages.sh
(+35 files in other folders)
