[project]
name = "neovim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "jupyter-client>=8.7.0",
    "jupytext>=1.19.1",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "pdflatex>=0.1.3",
    "plotly>=6.5.0",
    "pnglatex>=1.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
]
